--- a/css/cart.css
+++ b/css/cart.css
@@ -1,16 +1,17 @@
-.cart-product {
-  height: 100px;
-  border-radius: 10px;
-  font-weight: 700;
-  font-size: 20px;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+.cart-container {
+  width: 80%;
   border: 1px solid black;
+  margin: 110px auto;
   .cart-product {
-    border: 1px solid violet;
+    margin: 0px auto;
+    width: 100%;
     height: 100px;
-    img {
-      width: 50px;
-    }
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    border: 1px solid black;
+    overflow: hidden;
   }
 }
 
