--- a/css/build_components.css
+++ b/css/build_components.css
@@ -20,6 +20,12 @@ header {
       height: 80%;
       margin: 10px;
     }
+
+    .notification {
+      position: relative;
+      left: 50px;
+      top: -10px;
+    }
   }
 }
 
