--- a/css/home.css
+++ b/css/home.css
@@ -66,14 +66,20 @@
 .list-group {
   width: 90%;
   margin: 25px auto;
-  display: flex;
-  flex-direction: row;
+
+  /* display: flex; */
+  /* flex-direction: row; */
   justify-content: center;
   .list-group-item {
     border: none;
-    font-size: 20px;
+    /* font-size: 18px; */
     font-weight: 700;
-    width: 20%;
+    width: 100%;
+    /* border: 2px solid #888; */
+    height: 35px;
+    border-radius: 10px;
+    padding: 0px;
+    margin: 10px auto 20px;
   }
 
   img {
@@ -132,5 +138,15 @@
   }
   to {
     fill: "green";
+  }
+}
+
+.filter_prod-container {
+  position: relative;
+  border: 1px solid blck;
+  .products-section {
+    position: relative;
+    width: 80%;
+    margin: 0;
   }
 }
