--- a/css/home.css
+++ b/css/home.css
@@ -66,16 +66,11 @@
 .list-group {
   width: 90%;
   margin: 25px auto;
-
-  /* display: flex; */
-  /* flex-direction: row; */
   justify-content: center;
   .list-group-item {
     border: none;
-    /* font-size: 18px; */
     font-weight: 700;
     width: 100%;
-    /* border: 2px solid #888; */
     height: 35px;
     border-radius: 10px;
     padding: 0px;
@@ -87,43 +82,7 @@
   }
 }
 
-.card {
-  width: 85%;
-  border: 1px solid black;
-  /* background-color: #eee; */
-  object-fit: contain;
-  height: 400px;
-  margin: 20px auto;
-  cursor: pointer;
-  object-fit: contain;
-  text-align: center;
-  img {
-    height: 50%;
-    object-fit: contain;
-  }
-  .text-card {
-    height: 35%;
-  }
-  .add-btn {
-    border: none;
-    background: none;
-    position: absolute;
-    bottom: 18px;
-    right: 0px;
-    img {
-      margin: 0 75%;
-    }
-  }
-  .truncate {
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-}
 .add-btn svg {
-  /* border: 1px solid black; */
   position: absolute;
   bottom: 0px;
   left: 0%;
@@ -143,10 +102,77 @@
 
 .filter_prod-container {
   position: relative;
-  border: 1px solid blck;
   .products-section {
     position: relative;
     width: 80%;
     margin: 0;
+    div {
+      position: relative;
+      animation: 1.5s fadein;
+    }
+    .card {
+      width: 85%;
+      height: 400px;
+      border: 1px solid #d1e1af;
+      margin: 20px auto;
+      cursor: pointer;
+      object-fit: contain;
+      text-align: center;
+
+      background-color: #fff;
+      transition: background-color 0.3s;
+
+      img {
+        height: 50%;
+        object-fit: contain;
+      }
+      .text-card {
+        height: 35%;
+      }
+      .add-btn {
+        border: none;
+        background: none;
+        position: absolute;
+        bottom: 18px;
+        right: 0px;
+        img {
+          margin: 0 75%;
+        }
+      }
+      .truncate {
+        display: -webkit-box;
+        -webkit-line-clamp: 4;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+    .card:not(:hover) {
+      animation: none;
+    }
+    .card:hover {
+      animation: changeBG 0.4s forwards;
+    }
+  }
+}
+
+@keyframes changeBG {
+  from {
+    background-color: white;
+    font-weight: 500;
+  }
+  to {
+    background-color: #faf0e6;
+    font-size: 18px;
+  }
+}
+@keyframes fadein {
+  from {
+    top: 30px;
+    opacity: 0;
+  }
+  to {
+    top: 0px;
+    opacity: 1;
   }
 }
